added colorama in dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,8 @@ dependencies = [
     "psutil",
     "protobuf",
     "nest-asyncio",
-    "litellm"
+    "litellm",
+    "colorama"
 ]
 
 dynamic = ["version"]
